# Anaros

./: .bazelrc  .clang-format  .gitignore  BUILD  CMakeLists.txt  Dockerfile  LICENSE  MODULE.bazel  README.md  WORKSPACE.bzlmod  flake.nix
.github/workflows/: ci.yml
bazel/: yaml_cpp.BUILD
cmake/: AnarosConfig.cmake.in
nix/: BUILD  nixpkgs.nix  toolchain.nix
src/: BUILD  anaros.h
test/: BUILD  test.cpp
